substrate/frame/support/test/tests/pallet_ui/dev_mode_without_arg.stderr
error: A pallet::call requires either a concrete `#[pallet::weight($expr)]` or an
                               inherited weight from the `#[pallet:call(weight($type))]` attribute, but
                               none were given.
  --> tests/pallet_ui/dev_mode_without_arg.rs:39:7
   |
39 |         pub fn my_call(_origin: OriginFor<T>) -> DispatchResult {
   |             ^^
